...
              android:orientation="vertical"
              android:id="@+id/list"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_open"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
...
